--- a/README
+++ b/README
@@ -4,15 +4,13 @@ repo init --repo-url=git://git.omapzoom.org/tools/repo.git -u git://github.com/g
 
 repo sync
 
-
 Configure:
 
-choosecombo 1 1 zero 3
-
+. build/envsetup.sh && choosecombo 1 1 zero 3
 
 Compile:
-make `cat /proc/cpuinfo | grep "^processor" | wc -l` "$@" otapackage
 
+make `cat /proc/cpuinfo | grep "^processor" | wc -l` "$@" otapackage
 
 Squish:
 
