--- a/README
+++ b/README
@@ -1,21 +1,9 @@
-To initialize your local repository using the GeeksPhone Zero trees, use a command like this:
-
+To initialize your local repository using the GeeksPhone Zero trees, use a command like this
 repo init --repo-url=git://git.omapzoom.org/tools/repo.git -u git://github.com/gpzeroDev/android.git -b gingerbread
 
 repo sync
 
-Configure:
+To compile GP0 SR ROM you only need to do this:
+vendor/geeksphone/zero/tools/build.sh
 
-. build/envsetup.sh && choosecombo 1 1 zero 3
-
-Compile:
-
-make -j`cat /proc/cpuinfo | grep "^processor" | wc -l` "$@" otapackage
-
-Squish:
-
-cd vendor/geeksphone/zero/tools
-
-./squisher
-
-If you do this steps, you will have an update.zip file with the ROM!
+If you do this steps, you will have an update.zip and update-fastboot.zip files with the ROM!
